--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "adumbrate",
-  "version": "1.2.0",
+  "version": "1.2.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kalisjoshua/adumbrate-ui"
+  },
+  "license": "MIT",
   "dependencies": {
     "@just-boris/preact-scripts": "1.1.4",
     "preact": "^8.4.2",
